force-app/main/default/objects/Product2/fields/not_discountable__c.field-meta.xml
<CustomField>
    <fullName>not_discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if checked, the product is excluded from all discounts and therefore discount/calculations</inlineHelpText>
    <label>not discountable</label>
    <type>Checkbox</type>
</CustomField>