force-app/main/default/objects/Product2/fields/NotDiscountable__c.field-meta.xml
<CustomField>
    <fullName>NotDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Discountable</label>
    <type>Checkbox</type>
</CustomField>