force-app/main/default/objects/Product2/fields/NutritionalValue__c.field-meta.xml
<CustomField>
    <fullName>NutritionalValue__c</fullName>
    <label>Nutritional Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>