force-app/main/default/objects/Product2/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>