force-app/main/default/objects/Product2/fields/OldProductNumber__c.field-meta.xml
<CustomField>
    <fullName>OldProductNumber__c</fullName>
    <externalId>true</externalId>
    <label>Old Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>