force-app/main/default/objects/Product2/fields/PackageUnit__c.field-meta.xml
<CustomField>
    <fullName>PackageUnit__c</fullName>
    <label>Package Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>