force-app/main/default/objects/Product2/fields/PaletteCount__c.field-meta.xml
<CustomField>
    <fullName>PaletteCount__c</fullName>
    <label>Palette Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>