force-app/main/default/objects/Product2/fields/PreviewPrice__c.field-meta.xml
<CustomField>
    <fullName>PreviewPrice__c</fullName>
    <label>Preview Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>