force-app/main/default/objects/Product2/fields/PriceMax__c.field-meta.xml
<CustomField>
    <fullName>PriceMax__c</fullName>
    <description>JJDSF-771 Price Range field, populated by BatchCalculateProductPriceRange</description>
    <label>Price Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>