force-app/main/default/objects/Product2/fields/PriceMin__c.field-meta.xml
<CustomField>
    <fullName>PriceMin__c</fullName>
    <description>JJDSF-771 Range Prices for internal tool</description>
    <label>PriceMin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>