force-app/main/default/objects/Product2/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Group)</relationshipLabel>
    <relationshipName>Products_ProductGroup</relationshipName>
    <type>Lookup</type>
</CustomField>