force-app/main/default/objects/Product2/fields/ProductGroupName__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupName__c</fullName>
    <formula>ProductGroup__r.Name</formula>
    <label>Product Group Name</label>
    <type>Text</type>
</CustomField>