force-app/main/default/objects/Product2/fields/ProductSlider__c.field-meta.xml
<CustomField>
    <fullName>ProductSlider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Slider</label>
    <referenceTo>WebshopProductSlider__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>