force-app/main/default/objects/Product2/fields/ProductSubgroup__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Subgroup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Subgroup)</relationshipLabel>
    <relationshipName>Products_Subgroup</relationshipName>
    <type>Lookup</type>
</CustomField>