force-app/main/default/objects/Product2/fields/ProductSubgroupName__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroupName__c</fullName>
    <formula>ProductSubgroup__r.Name</formula>
    <label>Product Subgroup Name</label>
    <type>Text</type>
</CustomField>