force-app/main/default/objects/Product2/fields/ProductSubtitle__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtitle__c</fullName>
    <label>Product Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>