force-app/main/default/objects/Product2/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <formula>IF(ISBLANK( AlternativeName__c ), Name , AlternativeName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>