force-app/main/default/objects/Product2/fields/RainforestAllianceProduct__c.field-meta.xml
<CustomField>
    <fullName>RainforestAllianceProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rainforest-Alliance Product</label>
    <type>Checkbox</type>
</CustomField>