force-app/main/default/objects/Product2/fields/RainForestCertified__c.field-meta.xml
<CustomField>
    <fullName>RainForestCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rain Forest Certified</label>
    <type>Checkbox</type>
</CustomField>