force-app/main/default/objects/Product2/fields/ReleasedForAHS__c.field-meta.xml
<CustomField>
    <fullName>ReleasedForAHS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released for AHS</label>
    <type>Checkbox</type>
</CustomField>