force-app/main/default/objects/Product2/fields/ReleasedForExport__c.field-meta.xml
<CustomField>
    <fullName>ReleasedForExport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released for Export</label>
    <type>Checkbox</type>
</CustomField>