force-app/main/default/objects/Product2/fields/ReleasedForRetail__c.field-meta.xml
<CustomField>
    <fullName>ReleasedForRetail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released for Retail (LEH)</label>
    <type>Checkbox</type>
</CustomField>