force-app/main/default/objects/Product2/fields/SecondDiscountPossible__c.field-meta.xml
<CustomField>
    <fullName>SecondDiscountPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JJDSF-171</description>
    <label>Second Discount Possible</label>
    <type>Checkbox</type>
</CustomField>