force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>New Creation</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Phase-out Item</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Blocked for Use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>