force-app/main/default/objects/Product2/fields/StockMarketRelevant__c.field-meta.xml
<CustomField>
    <fullName>StockMarketRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock Market Relevant</label>
    <type>Checkbox</type>
</CustomField>