force-app/main/default/objects/Product2/fields/SubGroup__c.field-meta.xml
<CustomField>
    <fullName>SubGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Group</label>
    <referenceTo>SubGroup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>