force-app/main/default/objects/Product2/fields/SubgroupNamePDFButler__c.field-meta.xml
<CustomField>
    <fullName>SubgroupNamePDFButler__c</fullName>
    <formula>ProductSubgroup__c  &amp;
IF (
OR(
ProductGroup__c  = &quot;Produktgruppe: Röstkaffee&quot;,
ProductGroup__c  = &quot;Produktgruppe: Trinkschokolade&quot;
),
&quot; (Preis/Kg)&quot;,
&quot;&quot;)</formula>
    <label>Subgroup Name PDF Butler</label>
    <type>Text</type>
</CustomField>