force-app/main/default/objects/Product2/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>J. J. Darboven GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>Burkhof Kaffee GmbH</fullName>
            </value>
            <value>
                <fullName>J. Eilles GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven Internat. GmbH</fullName>
            </value>
            <value>
                <fullName>C.A.Wille Handelsges.mbH &amp; Co.</fullName>
            </value>
            <value>
                <fullName>C.A. Wille Hdl.- u. Verw. gmbH</fullName>
            </value>
            <value>
                <fullName>Andaco Import-u.Handelsges.mbH</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven /NL</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven France</fullName>
            </value>
            <value>
                <fullName>Burkhof Kava spol. s.r.o.</fullName>
            </value>
            <value>
                <fullName>IDEE KAFFEE Ges.m.b.H.</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven Poland sp.z o.o.</fullName>
            </value>
            <value>
                <fullName>Burkhof-Kava Slovakia s.r.o.</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven Hungaria Kft.</fullName>
            </value>
            <value>
                <fullName>Praxmarer Kaffeevertrieb</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven (Americas), Inc.</fullName>
            </value>
            <value>
                <fullName>Hochstrasser AG</fullName>
            </value>
            <value>
                <fullName>J. Hornig GmbH</fullName>
            </value>
            <value>
                <fullName>J.J. Darboven Ireland Ltd.</fullName>
            </value>
            <value>
                <fullName>IDEE Office Coffee Service GmbH</fullName>
            </value>
            <value>
                <fullName>Gourvita GmbH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>