force-app/main/default/objects/Product2/fields/VolumeUnit__c.field-meta.xml
<CustomField>
    <fullName>VolumeUnit__c</fullName>
    <label>Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Cubic inch</label>
            </value>
            <value>
                <fullName>BOE</fullName>
                <label>Barrel oil equivalent</label>
            </value>
            <value>
                <fullName>CD3</fullName>
                <label>Cubic decimeter</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Centiliter</label>
            </value>
            <value>
                <fullName>CM3</fullName>
                <label>Cubic centimeter</label>
            </value>
            <value>
                <fullName>FOZ</fullName>
                <label>Fluid Ounce US</label>
            </value>
            <value>
                <fullName>FT3</fullName>
                <label>Cubic foot</label>
            </value>
            <value>
                <fullName>GAL</fullName>
                <label>US gallon</label>
            </value>
            <value>
                <fullName>HL</fullName>
                <label>Hectoliter</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Liter</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>Cubic meter</label>
            </value>
            <value>
                <fullName>MM</fullName>
                <label>Milliliter</label>
            </value>
            <value>
                <fullName>MM3</fullName>
                <label>Cubic millimeter</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Pint, U.S. liquid</label>
            </value>
            <value>
                <fullName>QT</fullName>
                <label>Quart, U.S. liquid</label>
            </value>
            <value>
                <fullName>YD3</fullName>
                <label>Cubic yard</label>
            </value>
            <value>
                <fullName>scf</fullName>
                <label>Standard cubic foot</label>
            </value>
            <value>
                <fullName>Microliter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>