force-app/main/default/objects/Product2/fields/WebshopImageURL__c.field-meta.xml
<CustomField>
    <fullName>WebshopImageURL__c</fullName>
    <label>Webshop Image URL</label>
    <type>Url</type>
</CustomField>