force-app/main/default/objects/Product2/validationRules/Valid_Until_has_to_be_after_Valid_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Until_has_to_be_after_Valid_From</fullName>
    <active>false</active>
    <description>Enforces that the end date is after the start date.</description>
    <errorConditionFormula>AND ( NOT ISNULL(ValidUntil__c), 
					NOT ISNULL(ValidFrom__c), ValidUntil__c &lt; ValidFrom__c )</errorConditionFormula>
    <errorDisplayField>ValidUntil__c</errorDisplayField>
    <errorMessage>Valid until has to be after valid from</errorMessage>
</ValidationRule>