force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>GTIN__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Group__c</columns>
    <columns>SubGroup__c</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidUntil__c</columns>
    <columns>MinimumPrice__c</columns>
    <columns>LowestConditionForSalesAreaManager__c</columns>
    <columns>LowestConditionForSalesManager__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.PRODUCT_CLASS</field>
        <operation>equals</operation>
        <value>VP,VA</value>
    </filters>
    <label>All Products</label>
</ListView>